test/captureOpAssign1_2.slq

def main(){
	x:=0:ğ”¹;
	def foo(){
		xâŠ•=1;
		return x;
	}
	return x; /// error
}
